--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>Digital Payments Book</title>
 </head>
 
