--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,17 @@
 <html>
-
-<head>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <title>Digital Payments Book</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="app">
-        <!--Basic HTML here-->
+      <!--Basic HTML here-->
     </div>
-</body>
-<script src="../src/index.js" type="text/JSX"></script>
+  </body>
+  <script src="../src/index.js" type="text/JSX"></script>
 </html>
